methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:13: error: expected class or object definition
def round(c:Color) {
^PatternPicture:31: error: Unmatched closing brace '}' ignored here
}
^